[package]
name = "test_cuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
hex = "0.4.3"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dependencies.snarkvm-algorithms]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/new-posw"
features = ["coinbase_puzzle"]

[dependencies.snarkvm-curves]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/new-posw"

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/new-posw"
